Adicionado pagina pasta e pizza

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://www.allrecipes.com/thmb/14XqDSB3FLLbJn0Y7UYoLK62xP0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4931178-1be65e597b3f4e58ba23daeafef243bc.jpg" alt="">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quo voluptatum ipsam amet perferendis repellendus, placeat est nobis aliquid voluptas quia quibusdam beatae aut odit unde officiis et quas accusamus.</p>
+    <ul>
+        <li>lassagna</li>
+        <li>lasagna</li>
+        <li>lassasgna</li>
+        <li>lassassasgna</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, neque! A alias quod assumenda. Animi omnis, consequatur odio pariatur ipsam impedit voluptatum unde debitis alias quae rerum non ut accusantium.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati et blanditiis magni quidem, reprehenderit deleniti laudantium placeat? Eius adipisci unde tempore cumque pariatur, voluptates consequatur vero repellendus numquam, saepe beatae?</li>
+    </ol>
+
 </body>
 </html>
